# mega-manipulator-standalone

./: .env-example  .eslintrc.js  .gitignore  .prettierrc.json  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tauri-update.json  update_updater.bash  vite.config.ts
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml  setup-action.yml  tag_bump.yml  tag_version.yml  test.yml  update_version.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/hooks/: MegaContext.tsx  github.com.ts  github.com.tsx  logWrapper.ts  settings.ts  useMegaContext.tsx  useMegaSettings.tsx  useMutableState.tsx  usePassword.tsx
src/service/: CodeHostClient.ts  delay.ts  partition.ts  types.ts
src/service/file/: cloneDir.ts  copyDirService.ts  gitCommit.ts  scriptFile.ts  simpleActionWithResult.ts
src/service/git/: cloneWorker.ts
src/service/work/: workLog.ts
src/ui/: ButtonRow.tsx  ConditionalSkeleton.tsx  ErrorBoundry.tsx  LogsPage.tsx  NumberField.tsx  ThanksPage.tsx  Ui.tsx  types.tsx
src/ui/clones/: BranchView.tsx  ClonesPage.tsx  ClonesTable.tsx  CommitModal.tsx  CommitView.tsx  CreatePullRequestView.tsx  DeleteMenuItem.tsx  DiffModal.tsx  ExecuteScriptedChangeMenuItem.tsx  GenericMultiProjectMenuItem.tsx  MakeChangesWizard.tsx  MakeChangesWizardMenuItem.tsx  OpenProjectsMenuItem.tsx  PullRequestView.tsx  PushView.tsx  StageCommitPushMenuItem.tsx  StageView.tsx
src/ui/clones/dialactions/: CommitView.tsx  CreatePullRequestView.tsx  DeleteMenuItem.tsx  ExecuteScriptedChangeMenuItem.tsx  GenericMultiProjectMenuItem.tsx  MakeChangesWizard.tsx  OpenProjectsMenuItem.tsx  OpenRepoMenuItem.tsx  PushView.tsx  StageView.tsx
src/ui/components/: ButtonRow.tsx  MaxHitsField.tsx  MemorableTextField.tsx  NumberField.tsx
src/ui/components/speeddial/: GenericSpeedDial.tsx  GenericSpeedDialAction.tsx
src/ui/error/: ErrorBoundry.tsx  RoutingErrorBoundary.tsx
src/ui/graphql/: GraphQlExplorerPage.tsx
src/ui/manage/clones/clonepage/: CloneModal.tsx  ClonePage.tsx
src/ui/menu/: Menu.tsx
src/ui/modal/: megaModal.tsx
src/ui/pullrequests/: GitHubPullRequestSearch.tsx  GithubPullRequestView.tsx  PullRequestSearchPage.tsx  PullRequestsPage.tsx  PullRequestsTable.tsx
src/ui/pullrequests/actions/: GenericPrSpeedDialAction.tsx  GenericSpeedDialAction.tsx  GitHubClonePrSpeedDial.tsx  GitHubClosePrSpeedDial.tsx  GitHubDraftPrSpeedDial.tsx  GitHubEditPrSpeedDial.tsx  GitHubOpenPrInBrowserSpeedDial.tsx  GitHubPrOpenInBrowserSpeedDial.tsx  GitHubReOpenPrSpeedDial.tsx  useGitHubMergePrSpeedDial.tsx  useGitHubReviewPrSpeedDial.tsx
src/ui/result/: ResultPage.tsx
src/ui/route/: BasePage.tsx  NotFoundPage.tsx  locations.ts  megaRouter.tsx
src/ui/search/: GitHubSearchField.tsx  LocalSearchClient.tsx  LocalSearchField.tsx  SearchHitTable.tsx  SearchPage.tsx  SourceGraphClient.tsx  SourceGraphSearchField.tsx  githubSearch.ts  types.tsx  useGitHubClient.tsx  useSearchClient.tsx
src/ui/search/github/: GitHubSearchField.tsx  useGitHubClient.tsx  useGitHubSearchClient.tsx
src/ui/search/local/: LocalSearchClient.tsx  LocalSearchField.tsx  useLocalHitFilters.tsx
src/ui/search/sourcegraph/: SourceGraphClient.tsx  SourceGraphSearchField.tsx
src/ui/settings/: CodeHostSettingsPage.tsx  EnvValidationWarning.tsx  GitHubCodeHostSettingsPage.tsx  GitHubSearchHostSettingsPage.tsx  NewSearchHostButton.tsx  PasswordForm.tsx  ResetAllSettings.tsx  SearchHostSettings.tsx  SearchHostSettingsPage.tsx  Settings.tsx  SettingsPage.tsx  SourceGraphSearchHostSettingsPage.tsx
src/ui/wizard/: WizardComponent.tsx
