[package]
name = "mega-manipulator"
version = "0.0.0-git"
description = "Change everything"
authors = ["jensim->github.com"]
license = "GPLv3"
repository = "https://github.com/mega-manipulator/mega-manipulator-standalone"
default-run = "mega-manipulator"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
fs_extra = "1.2.0"
tauri = { version = "1.2.2", features = ["dialog-all", "fs-all", "http-all", "os-all", "path-all", "process-relaunch", "shell-all", "updater"] }
keyring = "1.2.0"
log = "0.4.17"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
branch = "dev"
[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
#tag = "v0.1.0"
branch = "dev"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
