[package]
name = "mega-manipulator"
version = "0.0.0"
description = "Change everything"
authors = ["jensim->github.com"]
license = "GPLv3"
repository = "https://github.com/mega-manipulator/mega-manipulator-standalone"
default-run = "mega-manipulator"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }
fs_extra = "1.3.0"
tauri = { version = "1.2.5", features = ["dialog-all", "fs-all", "http-all", "os-all", "path-all", "process-relaunch", "shell-all", "updater"] }
keyring = "2.0.2"
log = "0.4.17"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
